[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde_json = "1.0"
serde_yaml = "0.8"
serde = {version = "1.0", features = ["derive"]}
homedir = "0.2.1"
ratatui = "0.24.0"
crossterm = "0.27.0"
config = "0.10"

